--- a/second.html
+++ b/second.html
@@ -179,5 +179,10 @@
 
      </table>
 
+<br>
+     <h3>Previous:<a href="first.html">Coronavirus Outbreak in India</a></h3>
+
+     <h3 style="text-align:right">Next:<a href="third.html">Do's and Dont's in Lockdown</a></h3>
+
  </body>
 </html>
