--- a/first.html
+++ b/first.html
@@ -1,12 +1,20 @@
 <html>
-    <title>Coronavirus Outbreak in India</title>
+  <head>
+  <title>Coronavirus Outbreak in India</title>
 
+   <style>
+    #para
+    {
+      color:red;
+      font-family: cursive;
+    }
+    </style>
     <body>
       <h1><b><i>Coronavirus Outbreak in India</i></h1>
       <h3>
       <p>Coronavirus has caused a lot of problems in the entire world and claimed the lives of thousands of people around the globe. India has not been any different and even though it took a lot of early measures to delay the outbreak, it now has thousands of cases in the country.
       <p>The first case of the 2019–20 coronavirus pandemic in India was reported on 30 January 2020, originating from China. As of 3 May 2020, the Ministry of Health and Family Welfare have confirmed a total of 40,263 cases, 10,887 recoveries (including 1 migration) and 1306 deaths in the country. Experts suggest the number of infections could be much higher as India's testing rates are among the lowest in the world. The infection rate of COVID-19 in India is reported to be 1.7, significantly lower than in the worst affected countries.
-      <p><span style="color: red;">The outbreak has been declared an epidemic in more than a dozen states and union territories, where provisions of the Epidemic Diseases Act, 1897 have been invoked, and educational institutions and many commercial establishments have been shut down. India has suspended all tourist visas, as a majority of the confirmed cases were linked to other countries.</span>
+      <p id="para">The outbreak has been declared an epidemic in more than a dozen states and union territories, where provisions of the Epidemic Diseases Act, 1897 have been invoked, and educational institutions and many commercial establishments have been shut down. India has suspended all tourist visas, as a majority of the confirmed cases were linked to other countries.</p>
       <p>On 22 March 2020, India observed a 14-hour voluntary public curfew at the instance of the prime minister Narendra Modi. The government followed it up with lockdowns in 75 districts where COVID cases had occurred as well as all major cities. Further, on 24 March, the prime minister ordered a nationwide lockdown for 21 days, affecting the entire 1.3 billion population of India. On 14 April, the prime minister extended the ongoing nationwide lockdown till 3 May.
       <br>
 
