--- a/third.html
+++ b/third.html
@@ -5,22 +5,10 @@
 
    <title>Do's and Dont's in Lockdown</title>
 
+   <link rel="stylesheet" href="C:\Users\hp\Desktop\project0\variables.css">
+
     <style type="text/css">
 
-      ol li
-     {
-        font-size:20px;
-
-        font-family:calibri;
-
-        width:50%;
-
-        padding:10px;
-
-        border:5px;
-
-        margin:0 auto;
-      }
 
      h1
      {
